[tool.poetry]
name = "Caesar-Cipher"
version = "0.1.0"
description = ""
authors = ["Peng Chen <pchen0816@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"
pysnooper = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
